fix(css): add a temporary fix to horizontal scrolling with overflow hidden in .header

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,6 +7,7 @@ body {
   display: grid;
   place-items: center;
   gap: var(--spacing-300);
+  overflow: hidden;
 }
 
 .header__nav {
